--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         }
     </script>
     <br>
-    As you might of noticed each number you try always reaches 1 so it would be logical to think that every<br>
-    number would reach 1 but we don't know for sure, what if the next number you or I try would continue on forever<br>
-    
+    As you might of noticed what ever number you try is alawys comes back to 1, a number that doesn't<br>
+    go to 1 has yet to be found. Although this is not because of lack of effort, mathematicians have tested<br>
+    and verfied everything under 2^68 or 2.9514791e+20.<br>    
 </body>
 </html>
