--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
     </script>
     <br>
-    As you might of noticed what ever number you try is alawys comes back to 1, a number that doesn't<br>
+    As you might of noticed what ever number you try alawys comes back to 1, a number that doesn't<br>
     go to 1 has yet to be found. Although this is not because of lack of effort, mathematicians have tested<br>
     and verfied everything under 2^68 or 2.9514791e+20.<br>    
 </body>
